Added my name,details to credentials file
Added my details to credentials .yaml file

--- a/credentials.yaml
+++ b/credentials.yaml
@@ -33,6 +33,6 @@
 #   credentials['email']
 
 default:
-    email: sample@email.com
-    password: samplepassword
-    name: samplename
+    email: ananthulasrikar@gmail.com
+    password: srikarsriram
+    name: Srikar
